force-app/main/default/objects/Product_NIM__c/Product_NIM__c.object-meta.xml
<CustomObject>
    <description>Store NIMc, NIMd by Product</description>
    <label>PF Product NIM</label>
    <nameField>
        <displayFormat>PFN-{000000}</displayFormat>
        <label>PF Product NIM No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PF Product NIM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>