force-app/main/default/objects/Product_NIM__c/fields/NIID_DPA_YTD__c.field-meta.xml
<CustomField>
    <fullName>NIID_DPA_YTD__c</fullName>
    <label>NIID-DPA (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>