force-app/main/default/objects/Product_NIM__c/fields/NIMC_YTD__c.field-meta.xml
<CustomField>
    <fullName>NIMC_YTD__c</fullName>
    <label>NIMC (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>