force-app/main/default/objects/Product_NIM__c/fields/NIMD_MTD__c.field-meta.xml
<CustomField>
    <fullName>NIMD_MTD__c</fullName>
    <label>NIMD (MTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>